--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,50 @@
-body {
+body{
   padding-top: 5rem;
+  padding: 20px;
 }
 
-.indiefont {
+.indiefont{
 	text-align: right;
 	font-family: 'Indie Flower', cursive;
 } 
 
-figcaption {
-	font-family: 'Gamja Flower', cursive;
+figcaption{
+	font-family: 'Indie Flower', cursive;
 }
 
-p {
-	font-family: 'Gamja Flower', cursive;
+p{
+ font-family:'Indie Flower', cursive;
+	
 }
 
-.controller {
+.controller{
 	border: 1px solid #ddd;
 	border-radius: 4px;
 	padding: 5px;
-	width: 300px;
+	width: 100%;
 }
-.books {
+
+.books{
 	border: 1px solid #ddd;
 	border-radius: 4px;
 	padding: 5px;
-	width: 300px;
+	width: 100%;
 }
 
-.maphands {
+.maphands{
 	border: 1px solid #ddd;
 	border-radius: 4px;
 	padding: 5px;
-	width: 300px;
+	width: 100%;
 }
 
-
-.about {
+.about{
 	text-align: center;
 	font-family: 'Indie Flower', cursive;
 }
  
  #aboutsection{
- 	display: auto;
+ 	display: block;
  	padding: 20px 20px 20px 20px; 
     border-radius: 2%;
 }
@@ -51,24 +53,19 @@ p {
  	width: 100%;
  	padding:1px 1px 1px 1px;
  	border-radius: 1%;
- 	border: 2px solid #grey;
+ 	border: 2px solid #89043D;;
  }
 
  .logo{
- 	
  	text-align: left;
- 	align-content: left;
-
  }
 
- footer {
+ footer{
  	text-align: center;
  	font-family: 'Indie Flower', cursive;
  }
 
-	 
-
- .work{
+.work{
  	text-align: center;
  	font-family: 'Indie Flower', cursive;
  }
@@ -76,19 +73,14 @@ p {
  #worksection{
  	display: block;
  	padding: 20px 20px 20px 20px; 
- 	
- 
  	border-radius: 2%;
-
  }
 
 #contactsection{
  	display: block;
  	padding: 20px 20px 20px 20px; 
- 	
- 
  	border-radius: 2%;
-
+ 	text-align: center;
  }
 
  .contact{
@@ -96,28 +88,34 @@ p {
  	font-family: 'Indie Flower', cursive;
  }
 
- hr {
-
-  	
+hr {
 	border-bottom: 4px solid #89043D;
-
-
-
 }
 
- 
-nav{
-	background-color: #7A75A5;
+.contact_icons{
+	display: block;
+	text-align: center;
 }
 
-@media screen and (min-width: ){
-
+.flex-grid {
+	display: flex;
 }
 
-@media screen and (min-width: ){
-	
+.col {
+	flex: 1;
 }
 
-@media screen and (min-width: ){
-	
+@media screen and (min-width: 400px ){
+.flex-grid {
+	display: block;
+ }
+}
+
+@media screen and (min-width: 750px ){
+	figure{
+		width: 33%;
+		display: inline-block;
+		text-align: center;
+
+	}
 }
